<?xml version="1.0"?>
<package format="2">
  <name>nao_utec</name>
  <version>0.0.0</version>
  <description>Package for basic manipulation of NAO with ROS at UTEC</description>

  <maintainer email="oramos@utec.edu.pe">Oscar Ramos</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
